# 06-crm

./: Cargo.toml  cliff.toml
.github/workflows/: build.yml
crm/: Cargo.toml
crm-metadata/: Cargo.toml  build.rs
crm-send/: Cargo.toml
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm/src/: client.rs  server.rs
crm/src/abi/: mod.rs
protos/user-stats/: messages.proto
user-stat/: .env  Cargo.toml  user_stat.yml
user-stat/examples/: gen.rs
user-stat/src/: lib.rs
user-stat/src/abi/: mod.rs
user-stat/tests/: service.rs
